kubernetes/clusters/home/flux-operator/instance/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flux-operator
  namespace: flux-system
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Flux
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: flux.png
    gethomepage.dev/href: https://flux.syslabs.dev
    gethomepage.dev/podSelector: app.kubernetes.io/name=flux-operator
    gethomepage.dev/statusStyle: "dot"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`flux.syslabs.dev`)
      kind: Rule
      middlewares:
        - name: authentik-forward-auth
      services:
        - name: flux-operator
          port: 9080
  tls: {}
